--- a/portfolio[level 3]/skill.css
+++ b/portfolio[level 3]/skill.css
@@ -1,96 +1,5 @@
-body {
-    background-color: rgb(44, 42, 42);
-    margin: 0;
-    color: rgb(229, 225, 225);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: 700;
-}
-
-header {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-    width: 100%;
-}
-.logo{
-    display: flex;
-}
-
-.logo img {
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    /* margin-left: 0px; */
-}
-
-.nav {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-}
-
-.nav ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 40px;
-    list-style: none;
-    padding: 0;
-    flex-wrap: wrap;
-}
-
-.nav ul li {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.nav ul li a {
-    text-decoration: none;
-    color: white;
-    transition: color 0.3s;
-}
-
-.nav ul li a:hover {
-    color: rgba(174, 7, 7, 0.5);
-}
-
-h1{
-    display: grid;
-    justify-content: center;
-}
-h2{
-    display: grid;
-    justify-content: center; 
-    color: yellow;
-}
-p{
-    display: grid;
-    justify-content: center;
-    margin-top: 10px;
-    padding: 10px;
-}
-.skill{
-    display: flex;
-    justify-content: space-around;
-    padding: 10px;
-    display: flex;
-    flex-wrap: wrap;
-    background-color: rgb(44, 42, 42);
-    position: fixed;
-    position: static;
-    overflow-y: auto;
-}
-.same{
-    font-size: 35px;
-    border: 5px dotted goldenrod;
-    border-radius: 15px;
-    margin: 20px;
-    padding: 35px;
-}
-.same img {
-    height: 66%;
-    border: 4px dashed grey;
-    border-radius: 10%;
-
+.skill-card i {
+    font-size: 100px; /* Matches the size of previous placeholder images */
+    margin-bottom: 1rem; /* Matches mb-4 in Tailwind */
+    color: #f472b6; /* Matches text-pink-400 for consistency */
 }
